--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin сад огород события">
-    <meta name="keywords" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin сад огород события" />
+    <meta name="description" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin события сад огород">
+    <meta name="keywords" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin события сад огород" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Муцин Улитки." />
-    <meta property="og:description" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin сад огород события" />
+    <meta property="og:description" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin события сад огород" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="ulitochka_eco_farm" />
 
@@ -156,6 +156,15 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="события экоферма улиточка">
+									<a href="./tags/./sobytiya-ekoferma-ulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/sobytiya-ekoferma-ulitochka.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">события экоферма улиточка</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="сад огород экоферма улиточка">
 									<a href="./tags/./sad-ogorod-ekoferma-ulitochka.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/sad-ogorod-ekoferma-ulitochka.png);"></div>
@@ -179,15 +188,6 @@
 										<div class="stories__slide-pic" style="background-image: url(./img/og/snailmucin.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
 ">snailmucin</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="события экоферма улиточка">
-									<a href="./tags/./sobytiya-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sobytiya-ekoferma-ulitochka.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">события экоферма улиточка</div>
 									</a>
 								</div>
 							</div>
@@ -318,32 +318,43 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./posts/./vot-i-otshumeli-prazdniki.html" class="article-more__item">
+								<a href="./posts/./my-vmeste-s-xvxkonovalov-kak-vsegda.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>63</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=AZGG7bXv8rUAX_M6eOS&oh=ff16e80974982c4c5053c514f987b1f5&oe=5EDDDF6E" alt="Вот и отшумели праздники!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84447085_1111430125855918_8414975268671877222_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=pKVvLKTs0MkAX9SILA8&oh=ba61bf5d88b579433e8de558c2b1e7ac&oe=5ED23790" alt="Мы вместе с @v_konovalov как всегда,">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Вот и отшумели праздники!</div>
+">Мы вместе с @v_konovalov как всегда,</div>
 								</a>
 								<a href="./posts/./fevral--my-provedyom-v-puteshestvii.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>58</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=rbroqyRlOAEAX-gXsj5&oh=d48e077a7f11f74443efe38f35d2a7f7&oe=5EE01C99" alt="Февраль мы проведём в путешествии.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=VRjC5CEX2P0AX_UXZ3Y&oh=02a73141fa5e7af540f42117e63f3bf8&oe=5EE01C99" alt="Февраль мы проведём в путешествии.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Февраль мы проведём в путешествии.</div>
 								</a>
+								<a href="./posts/./vot-i-otshumeli-prazdniki.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=op-BcPZgzu0AX9UyLSS&oh=3eeacbe5353c171813f4da7ca2cab9e1&oe=5EDDDF6E" alt="Вот и отшумели праздники!">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Вот и отшумели праздники!</div>
+								</a>
 								<a href="./posts/./o-tom-kak-my-stroili-shourumx-on-zhe-degustatsionnyy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>53</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>54</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=Z9e3AUcUOdgAX9hsyTr&oh=6b5fd9378ee2612a50f4547c70254aa0&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
 									</div>
@@ -356,11 +367,22 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>45</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=NSsaPQ58_HMAX8cvk98&oh=257e27a593ebbfb40a56c8a6e67be187&oe=5ED0BE20" alt="Как правильно разводить муцин.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=UzmUP_gHPC8AX-wJeLP&oh=c186243f0a23dffd1f934d74f8464364&oe=5ED0BE20" alt="Как правильно разводить муцин.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Как правильно разводить муцин.</div>
+								</a>
+								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>42</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=IYAPJzfHwqkAX92dhIU&oh=a36945bdf1d63cfaf7686b06cab68e02&oe=5F00645F" alt="Расскажу о некоторых тонкостях">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Расскажу о некоторых тонкостях</div>
 								</a>
 								<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -373,38 +395,16 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">Сегодня пост без информации и полезностей.</div>
 								</a>
-								<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=XoBaadU0HD8AX8nMemH&oh=a8b8d447b208bf85b1adc4a3d90d60ce&oe=5ECBD303" alt="Про улиткин домик 🐚">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Про улиткин домик 🐚</div>
-								</a>
 								<a href="./posts/./dlya-tekh-kto-eshchyo-somnevaetsya-v-deystvii-mutsina.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>42</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=yjk-iKfBI9gAX9BwitU&oh=cf65a2675f3706a6f10bdd2f649b511e&oe=5F01D912" alt="Для тех кто ещё сомневается в действии муцина">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Для тех кто ещё сомневается в действии муцина</div>
-								</a>
-								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=IYAPJzfHwqkAX92dhIU&oh=a36945bdf1d63cfaf7686b06cab68e02&oe=5F00645F" alt="Расскажу о некоторых тонкостях">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Расскажу о некоторых тонкостях</div>
 								</a>
 							</div>
 						</div>
