--- a/links.html
+++ b/links.html
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=M_DBiJ55hJwAX9_VfJQ&oh=e3e7259955db8abc88fca969ea64b45a&oe=5E80FFCE" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pvSM2UyBODIAX-bbgWg&oh=f9cc876d243fa1b28c1f2dbcc8f54b3f&oe=5E80FFCE" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -323,7 +323,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>73</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84447085_1111430125855918_8414975268671877222_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Cd8TIIs224YAX-kQR-q&oh=aad8ad81b2ee268d67073d9fa4f77391&oe=5E831D90" alt="Мы вместе с @v_konovalov как всегда,">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84447085_1111430125855918_8414975268671877222_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=pMD9zRycrBkAX_7k2Jb&oh=3c666cff69373b8204b6e4343f541764&oe=5E831D90" alt="Мы вместе с @v_konovalov как всегда,">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -351,6 +351,17 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">Вот и отшумели праздники!</div>
 								</a>
+								<a href="./posts/./xxdlya-ulitki-eyo-mutsin.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Smo5PaaHMoEAX9U_EHd&oh=d9937840a3dbc49a0b000212d60d7a24&oe=5E8AEBEC" alt="💧Для улитки её муцин">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">💧Для улитки её муцин</div>
+								</a>
 								<a href="./posts/./o-tom-kak-my-stroili-shourumx-on-zhe-degustatsionnyy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
@@ -361,17 +372,6 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">О том как мы строили шоурум, он же дегустационный</div>
-								</a>
-								<a href="./posts/./xxdlya-ulitki-eyo-mutsin.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>50</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Smo5PaaHMoEAX9U_EHd&oh=d9937840a3dbc49a0b000212d60d7a24&oe=5E8AEBEC" alt="💧Для улитки её муцин">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">💧Для улитки её муцин</div>
 								</a>
 								<a href="./posts/./kak-pravil-no-razvodit--mutsin.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -389,22 +389,22 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=O3n3UR_qgTkAX8-6Aqx&oh=af7cd126c06080977ca91142d6217941&oe=5E804B4C" alt="Сегодня пост без информации и полезностей.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Ve2DfLOl01AAX9W4cCz&oh=0340b28f36e884edf18ee884120756d7&oe=5E804B4C" alt="Сегодня пост без информации и полезностей.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Сегодня пост без информации и полезностей.</div>
 								</a>
-								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
+								<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=3Cccj5mvnkgAX863BMi&oh=04b424dec94dc649c25b21a08bfca498&oe=5E89BD5F" alt="Расскажу о некоторых тонкостях">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=As-pRp9zop0AX-qr4_F&oh=d7dba6f0bf67ea303897db6926adcdc4&oe=5E89E803" alt="Про улиткин домик 🐚">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Расскажу о некоторых тонкостях</div>
+">Про улиткин домик 🐚</div>
 								</a>
 							</div>
 						</div>
