--- a/links.html
+++ b/links.html
@@ -334,33 +334,33 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>62</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=sMO0VfsPhCUAX9kiyIn&oh=f35865cbba71c82caae86ecf2e5438b5&oe=5E83D399" alt="Февраль мы проведём в путешествии.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=177N6OPY-80AX-cay7M&oh=85e6db6bed65a3fbcaae28a2d75d2ebb&oe=5E83D399" alt="Февраль мы проведём в путешествии.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Февраль мы проведём в путешествии.</div>
+								</a>
+								<a href="./posts/./xxdlya-ulitki-eyo-mutsin.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>62</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=jJyHA0VwRhYAX9cZ5xL&oh=f66d4544af9159e9d34d7a689f20af47&oe=5E8AEBEC" alt="💧Для улитки её муцин">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">💧Для улитки её муцин</div>
 								</a>
 								<a href="./posts/./vot-i-otshumeli-prazdniki.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=z5mThfyHgHQAX8QB7zh&oh=223aa5d363db376e1bb0b0aafe321544&oe=5E81966E" alt="Вот и отшумели праздники!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=lQLSOpa9emQAX-LTiCI&oh=c00ae9250095b7710fa3a741faa8fe3d&oe=5E81966E" alt="Вот и отшумели праздники!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Вот и отшумели праздники!</div>
-								</a>
-								<a href="./posts/./xxdlya-ulitki-eyo-mutsin.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Smo5PaaHMoEAX9U_EHd&oh=d9937840a3dbc49a0b000212d60d7a24&oe=5E8AEBEC" alt="💧Для улитки её муцин">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">💧Для улитки её муцин</div>
 								</a>
 								<a href="./posts/./o-tom-kak-my-stroili-shourumx-on-zhe-degustatsionnyy.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -378,22 +378,11 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>46</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=DeXm5aDkf0EAX9QSn-H&oh=631cce3c18375df545db0759019dc09a&oe=5E81A420" alt="Как правильно разводить муцин.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=evSo7-NBorEAX8w_TxW&oh=14996019c29b1fd5673b8ba302b22d76&oe=5E81A420" alt="Как правильно разводить муцин.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Как правильно разводить муцин.</div>
-								</a>
-								<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Ve2DfLOl01AAX9W4cCz&oh=0340b28f36e884edf18ee884120756d7&oe=5E804B4C" alt="Сегодня пост без информации и полезностей.">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Сегодня пост без информации и полезностей.</div>
 								</a>
 								<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -405,6 +394,17 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Про улиткин домик 🐚</div>
+								</a>
+								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=sfPQdeHrzi4AX9JK2Mj&oh=34c87b5a532b3b03a3cb6bd293878acc&oe=5E89BD5F" alt="Расскажу о некоторых тонкостях">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Расскажу о некоторых тонкостях</div>
 								</a>
 							</div>
 						</div>
