--- a/links.html
+++ b/links.html
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pvSM2UyBODIAX-bbgWg&oh=f9cc876d243fa1b28c1f2dbcc8f54b3f&oe=5E80FFCE" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pvSM2UyBODIAX-bbgWg&oh=6a20774afbc602ce2b45b83e1f0d07e4&oe=5E8E2ECE" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -367,7 +367,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=fPjxDeM01zUAX_zHMaq&oh=6650335c6d3a1b033b53ad2a10c18c8a&oe=5E82CF36" alt="О том как мы строили шоурум, он же дегустационный">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=GtFH8ZAe1UsAX9Hcdk-&oh=42f668a33a88730fde61920dbbe2fe32&oe=5E82CF36" alt="О том как мы строили шоурум, он же дегустационный">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -389,22 +389,22 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=As-pRp9zop0AX-qr4_F&oh=d7dba6f0bf67ea303897db6926adcdc4&oe=5E89E803" alt="Про улиткин домик 🐚">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=idCIi4kMZ7AAX8T4sEt&oh=4f585fbfac21c2dceabdab7fa64d0132&oe=5E89E803" alt="Про улиткин домик 🐚">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Про улиткин домик 🐚</div>
 								</a>
-								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
+								<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=sfPQdeHrzi4AX9JK2Mj&oh=34c87b5a532b3b03a3cb6bd293878acc&oe=5E89BD5F" alt="Расскажу о некоторых тонкостях">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Ve2DfLOl01AAX9W4cCz&oh=aa3e7ac443b2ab2ce4b3f0f3b5ad7531&oe=5E8D7A4C" alt="Сегодня пост без информации и полезностей.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Расскажу о некоторых тонкостях</div>
+">Сегодня пост без информации и полезностей.</div>
 								</a>
 							</div>
 						</div>
